--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "angular": "^1.5.8",
     "body-parser": "^1.15.2",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
-    "mongodb": "^2.2.10"
+    "font-awesome": "^4.7.0",
+    "mongodb": "^2.2.10",
+    "simplemde": "^1.11.2"
   }
 }
