--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.15.2",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
+    "express-helpers": "^1.3.2",
     "express-session": "^1.14.1",
     "font-awesome": "^4.7.0",
     "marky-markdown": "^9.0.1",
